tests/ui/consts/issue-32829-2.stderr
error[E0015]: cannot call non-const function `invalid` in constants
  --> $DIR/issue-32829-2.rs:10:9
   |
LL | const bad_two : u32 = {
   | ------------------- calls in constants are limited to constant functions, tuple structs and tuple variants
LL |     {
LL |         invalid();
   |         ^^^^^^^^^
   |
note: function `invalid` is not const
  --> $DIR/issue-32829-2.rs:68:1
   |
LL | fn invalid() {}
   | ^^^^^^^^^^^^

error[E0015]: cannot call non-const function `invalid` in statics
  --> $DIR/issue-32829-2.rs:32:9
   |
LL | static bad_five : u32 = {
   | --------------------- calls in statics are limited to constant functions, tuple structs and tuple variants
LL |     {
LL |         invalid();
   |         ^^^^^^^^^
   |
note: function `invalid` is not const
  --> $DIR/issue-32829-2.rs:68:1
   |
LL | fn invalid() {}
   | ^^^^^^^^^^^^
   = note: consider wrapping this expression in `std::sync::LazyLock::new(|| ...)`

error[E0015]: cannot call non-const function `invalid` in statics
  --> $DIR/issue-32829-2.rs:54:9
   |
LL | static mut bad_eight : u32 = {
   | -------------------------- calls in statics are limited to constant functions, tuple structs and tuple variants
LL |     {
LL |         invalid();
   |         ^^^^^^^^^
   |
note: function `invalid` is not const
  --> $DIR/issue-32829-2.rs:68:1
   |
LL | fn invalid() {}
   | ^^^^^^^^^^^^
   = note: consider wrapping this expression in `std::sync::LazyLock::new(|| ...)`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0015`.
